# xfce4-newtonmenu-plugin

./: .gitignore  .gitmodules  README.md  THANKS  breaking.txt  configure.ac  context.txt  context_doomp.sh  continue.config.json  meson.build  panel_plugin_content.txt  xfce4-newtonmenu-dump-2025-05-29_02-16-25.txt  xfce4-newtonmenu-dump-2025-05-29_02-17-52.txt  xfce4-newtonmenu-dump-2025-05-29_02-18-19.txt  xfce4-newtonmenu-plugin-20250523-144715_llm_context.txt  xfce4-newtonmenu-plugin-20250526-011620_working.txt  xfce4-newtonmenu-plugin-20250528-224534_working.txt
icons/: Makefile.am  meson.build
icons/256x256/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  dbusmenu-integration.c  dbusmenu-integration.h  meson.build  newtonbutton-dialog.ui  newtonbutton-dialogs.c  newtonbutton-dialogs.h  newtonbutton-force-quit-dialog.c  newtonbutton-force-quit-dialog.h  newtonbutton.c  newtonbutton.desktop.in  newtonbutton.gresource.xml  newtonbutton.h  newtonmenu-appmenu-bridge.vala  newtonmenu-dialog.ui  newtonmenu-dialogs.c  newtonmenu-dialogs.h  newtonmenu-force-quit-dialog.c  newtonmenu-force-quit-dialog.h  newtonmenu-force-quit-dialog.ui  newtonmenu.c  newtonmenu.gresource.xml  newtonmenu.h
po/: POTFILES.in
subprojects/: vala-panel-appmenu-20250526-010740_simple.txt  vala-panel-appmenu-20250526-010743_simple.txt  vala-panel-appmenu-20250526-010752_simple.txt
