install_data(
  '256x256' / 'xfce4-newtonbutton-plugin.png',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / '48x48' / 'apps',
)

install_data(
  'scalable' / 'xfce4-newtonbutton-plugin.svg',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
