install_data(
  '256x256' / 'xfce4-newtonmenu-plugin.png',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps',
)

install_data(
  'scalable' / 'xfce4-newtonmenu-plugin.svg',
  install_dir: get_option('prefix') / get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
